Important modifications and refactorings performed